iter/05: governance and user docs for gc-forge run
- API-FREEZE: iter 5 surface (manifest module, run subcommand).
- ITERATION-LOG: iter 5 entry, in-flight decisions (image rebuild
  discipline, runtime os/arch, lowercase-hex seed in filename, manifest
  module placement, validation defaults to skipped), bilan with iter 6
  handoff.
- CHANGELOG: gc-forge run, manifest module, run-manifest schema,
  steady-g1-baseline preset.
- doc/user/getting-started.md: filled "First scenario" walk-through
  and "Reading the manifest" with the eight top-level fields.
- doc/user/cli-reference.md: dropped TODO markers from the run
  subcommand, populated the full options table; --preset deferral noted.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>